--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,6 +1,6 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/sh
-sudo apt --yes install autojump ripgrep
+sudo apt --yes install autojump ripgrep fzf
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
 brew install autojump ripgrep
