Added Vim plugins to ease navigating files with fzf and display git info.

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -3,5 +3,5 @@
 sudo apt --yes install autojump ripgrep fzf
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
-brew install autojump ripgrep
+brew install autojump ripgrep fzf
 {{ end -}}
