Default email to ease use with Gitpod and Codespaces

--- a/dot_gitconfig_local.tmpl
+++ b/dot_gitconfig_local.tmpl
@@ -1,10 +1,10 @@
 # This is Git's per-user configuration file.
 [user]
   name = Stéphane MOR
-  email = {{ .email | quote }} 
+  email = stephanemor@gmail.com
 
-[url "ssh://git@github.com/"]
-  insteadOf = https://github.com/
+# [url "ssh://git@github.com/"]
+#  insteadOf = https://github.com/
 
 # GitLab Access token
 #[url "https://shell:glpat-74qQJacJCAAE-TKPnpRo@gitlab.com"]
