--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,6 +1,8 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/sh
-sudo apt --yes install autojump ripgrep fzf bat
+sudo apt --yes install autojump fzf
+# Fix issue while installing bat and ripgrep at the same time
+sudo apt install -o Dpkg::Options::="--force-overwrite" bat ripgrep
 {{ else if eq .chezmoi.os "darwin" -}}
 #!/bin/sh
 brew install autojump ripgrep fzf bat
